syntax = "proto3";

import "google/protobuf/any.proto";

package Primitives;

service PrimitiveService {
  rpc Request_int32(int32_InOut) returns (int32_InOut);
  rpc Request_with_repeated_int32(int32_repeated_InOut) returns (int32_repeated_InOut);
  rpc Request_int64(int64_InOut) returns (int64_InOut);
  rpc Request_with_repeated_int64(int64_repeated_InOut) returns (int64_repeated_InOut);
  rpc Request_uint32(uint32_InOut) returns (uint32_InOut);
  rpc Request_with_repeated_uint32(uint32_repeated_InOut) returns (uint32_repeated_InOut);
  rpc Request_uint64(uint64_InOut) returns (uint64_InOut);
  rpc Request_with_repeated_uint64(uint64_repeated_InOut) returns (uint64_repeated_InOut);
  rpc Request_sint32(sint32_InOut) returns (sint32_InOut);
  rpc Request_with_repeated_sint32(sint32_repeated_InOut) returns (sint32_repeated_InOut);
  rpc Request_sint64(sint64_InOut) returns (sint64_InOut);
  rpc Request_with_repeated_sint64(sint64_repeated_InOut) returns (sint64_repeated_InOut);
  rpc Request_fixed32(fixed32_InOut) returns (fixed32_InOut);
  rpc Request_with_repeated_fixed32(fixed32_repeated_InOut) returns (fixed32_repeated_InOut);
  rpc Request_fixed64(fixed64_InOut) returns (fixed64_InOut);
  rpc Request_with_repeated_fixed64(fixed64_repeated_InOut) returns (fixed64_repeated_InOut);
  rpc Request_sfixed32(sfixed32_InOut) returns (sfixed32_InOut);
  rpc Request_with_repeated_sfixed32(sfixed32_repeated_InOut) returns (sfixed32_repeated_InOut);
  rpc Request_sfixed64(sfixed64_InOut) returns (sfixed64_InOut);
  rpc Request_with_repeated_sfixed64(sfixed64_repeated_InOut) returns (sfixed64_repeated_InOut);
  rpc Request_bool(bool_InOut) returns (bool_InOut);
  rpc Request_with_repeated_bool(bool_repeated_InOut) returns (bool_repeated_InOut);
  rpc Request_string(string_InOut) returns (string_InOut);
  rpc Request_with_repeated_string(string_repeated_InOut) returns (string_repeated_InOut);
  rpc Request_double(double_InOut) returns (double_InOut);
  rpc Request_with_repeated_double(double_repeated_InOut) returns (double_repeated_InOut);
  rpc Request_float(float_InOut) returns (float_InOut);
  rpc Request_with_repeated_float(float_repeated_InOut) returns (float_repeated_InOut);
  rpc Request_bytes(bytes_InOut) returns (bytes_InOut);
  rpc Request_with_repeated_bytes(bytes_repeated_InOut) returns (bytes_repeated_InOut);
  rpc Request_map_type(map_type_InOut) returns (map_type_InOut);
  rpc Request_with_repeated_map_type(map_type_repeated_InOut) returns (map_type_repeated_InOut);
  rpc Request_enum_type(enum_type_InOut) returns (enum_type_InOut);
  rpc Request_with_repeated_enum_type(enum_type_repeated_InOut) returns (enum_type_repeated_InOut);
  rpc Request_any_type(any_type_InOut) returns (any_type_InOut);
  rpc Request_with_repeated_any_type(any_type_repeated_InOut) returns (any_type_repeated_InOut);
}

message int32_InOut {
  int32 value = 1;
}

message int32_repeated_InOut {
  repeated int32 values = 1;
}
message int64_InOut {
  int64 value = 1;
}

message int64_repeated_InOut {
  repeated int64 values = 1;
}
message uint32_InOut {
  uint32 value = 1;
}

message uint32_repeated_InOut {
  repeated uint32 values = 1;
}
message uint64_InOut {
  uint64 value = 1;
}

message uint64_repeated_InOut {
  repeated uint64 values = 1;
}
message sint32_InOut {
  sint32 value = 1;
}

message sint32_repeated_InOut {
  repeated sint32 values = 1;
}
message sint64_InOut {
  sint64 value = 1;
}

message sint64_repeated_InOut {
  repeated sint64 values = 1;
}
message fixed32_InOut {
  fixed32 value = 1;
}

message fixed32_repeated_InOut {
  repeated fixed32 values = 1;
}
message fixed64_InOut {
  fixed64 value = 1;
}

message fixed64_repeated_InOut {
  repeated fixed64 values = 1;
}
message sfixed32_InOut {
  sfixed32 value = 1;
}

message sfixed32_repeated_InOut {
  repeated sfixed32 values = 1;
}
message sfixed64_InOut {
  sfixed64 value = 1;
}

message sfixed64_repeated_InOut {
  repeated sfixed64 values = 1;
}
message bool_InOut {
  bool value = 1;
}

message bool_repeated_InOut {
  repeated bool values = 1;
}
message string_InOut {
  string value = 1;
}

message string_repeated_InOut {
  repeated string values = 1;
}
message double_InOut {
  double value = 1;
}

message double_repeated_InOut {
  repeated double values = 1;
}
message float_InOut {
  float value = 1;
}

message float_repeated_InOut {
  repeated float values = 1;
}
message bytes_InOut {
  bytes value = 1;
}

message bytes_repeated_InOut {
  repeated bytes values = 1;
}
message map_type_InOut {
  map_type value = 1;
}

message map_type_repeated_InOut {
  repeated map_type values = 1;
}
message enum_type_InOut {
  enum_type value = 1;
}

message enum_type_repeated_InOut {
  repeated enum_type values = 1;
}
message any_type_InOut {
  any_type value = 1;
}

message any_type_repeated_InOut {
  repeated any_type values = 1;
}

enum enum_type {
	UNIVERSAL = 0;
	WEB = 1;
	IMAGES = 2;
	LOCAL = 3;
	NEWS = 4;
	PRODUCTS = 5;
	VIDEO = 6;
}

message map_type {
	map<int32, string> map_key_int32_values = 1;
	map<int64, string> map_key_int64_values = 2;
	map<uint32, string> map_key_uint32_values = 3;
	map<uint64, string> map_key_uint64_values = 4;
	map<sint32, string> map_key_sint32_values = 5;
	map<sint64, string> map_key_sint64_values = 6;
	map<fixed32, string> map_key_fixed32_values = 7;
	map<fixed64, string> map_key_fixed64_values = 8;
	map<sfixed32, string> map_key_sfixed32_values = 9;
	map<sfixed64, string> map_key_sfixed64_values = 10;
	map<bool, string> map_key_bool_values = 11;
	map<string, string> map_key_string_values = 12;
}

message Stock {
	string stock_message = 1;
}

message Currency {
	string currency_message = 1;
}

message any_type {
    google.protobuf.Any instrument = 1;
}